# breadcrumbs

./: .gitignore  CLAUDE.md  llms.txt  main.py  models.py  pyproject.toml
app/: db.py  models.py
tests/: __init__.py  conftest.py  test_crumb_model.py  test_tag_model.py  test_unit_model.py
