[project]
name = "breadcrumbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.120.1",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
